# nu_plugin_ws

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: publish.yml  tests.yml
src/: lib.rs  main.rs
src/ws/: client.rs
tests/: integration_tests.rs  unit_tests.rs
