[package]
authors = ["Alex Johnson <alex.kattathra.johnson@gmail.com>"]
homepage = "https://github.com/alex-kattathra-johnson/nu_plugin_ws"
readme = "README.md"
license = "MIT"
name = "nu_plugin_ws"
description = "A Nushell plugin for easily streaming output from websocket endpoints"
version = "0.3.1"
edition = "2021"

[dependencies]
nu-plugin = "0.104.0"
nu-protocol = "0.104.0"
tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.3"
